renamed selected class to avoid css bleed

--- a/extension/src/assets/styles/external/generalCSTStyle.css
+++ b/extension/src/assets/styles/external/generalCSTStyle.css
@@ -363,7 +363,7 @@ progress {
     border-color: white !important;
 }
 
-.selected{
+.cstSelected{
     border: 1px dashed white !important;
 }
 
